<?xml version="1.0" encoding="utf-8"?>

<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/searchFragment">

    <fragment
        android:id="@+id/searchFragment"
        android:name="com.damtoy.githubuser.presentation.search.SearchFragment"
        android:label="@string/title_search">

        <action
            android:id="@+id/action_search_to_detail"
            app:destination="@id/userDetailFragment" />

    </fragment>

    <fragment
        android:id="@+id/favoriteFragment"
        android:name="com.damtoy.githubuser.presentation.favorite.FavoriteFragment"
        android:label="@string/title_favorite">

        <action
            android:id="@+id/action_favorite_to_detail"
            app:destination="@id/userDetailFragment" />

    </fragment>

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.damtoy.githubuser.presentation.settings.SettingsFragment"
        android:label="@string/title_settings" />

    <fragment
        android:id="@+id/userDetailFragment"
        android:name="com.damtoy.githubuser.presentation.detail.UserDetailFragment"
        android:label="@string/title_detail">

        <argument
            android:name="username"
            app:argType="string" />

    </fragment>

</navigation>